<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LLAEasyAlertManagerDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ActionTitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yvx-Wc-A5L">
                                <rect key="frame" x="147.5" y="59" width="80.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Default" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ClN-89-AzU">
                                <rect key="frame" x="102.5" y="95" width="170" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="IDTextFieldDefault"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="lOq-aD-NQ7"/>
                                    <constraint firstAttribute="height" constant="30" id="xig-rX-Xde"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Cancel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9tX-i2-CVS">
                                <rect key="frame" x="102.5" y="133" width="170" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="IDTextFieldCancel"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="WZo-lr-kRJ"/>
                                    <constraint firstAttribute="height" constant="30" id="nNV-M5-Fa8"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alert Present Buttons" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tLW-YZ-fpl">
                                <rect key="frame" x="105.5" y="204" width="164" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Gad-tj-EZ4">
                                <rect key="frame" x="107.5" y="239" width="160" height="290"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLl-zz-8XD">
                                        <rect key="frame" x="0.0" y="0.0" width="160" height="40"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="Jby-gH-fOJ"/>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="160" id="qA5-98-OHq"/>
                                        </constraints>
                                        <state key="normal" title="Message"/>
                                        <connections>
                                            <action selector="buttonActionMessage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fdg-4A-YZm"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="58q-1j-eKY">
                                        <rect key="frame" x="0.0" y="60" width="160" height="50"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="ZMw-Ci-Vyc"/>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="pLl-M0-jJa"/>
                                        </constraints>
                                        <state key="normal" title="MessageTitle"/>
                                        <connections>
                                            <action selector="buttonActionMessageTitle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yfx-HZ-EBP"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6Q-yY-pAv">
                                        <rect key="frame" x="0.0" y="130" width="160" height="40"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="EXM-Jz-GRw"/>
                                            <constraint firstAttribute="height" constant="40" id="o3s-Nj-ILf"/>
                                        </constraints>
                                        <state key="normal" title="HandlerDefault"/>
                                        <connections>
                                            <action selector="buttonActionHandlerDefault:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nJb-qF-OKo"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1B-N2-Cbo">
                                        <rect key="frame" x="0.0" y="190" width="160" height="40"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="GN0-5e-mC2"/>
                                            <constraint firstAttribute="height" constant="40" id="Ovj-X0-Z1A"/>
                                        </constraints>
                                        <state key="normal" title="HandlerCancel"/>
                                        <connections>
                                            <action selector="buttonActionHandlerCancel:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iuq-lb-Rs8"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wnU-xy-7ok">
                                        <rect key="frame" x="0.0" y="250" width="160" height="40"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="2wB-ut-Bgq"/>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="Rib-H5-Obb"/>
                                        </constraints>
                                        <state key="normal" title="HandlerBoth"/>
                                        <connections>
                                            <action selector="buttonActionHandlerBoth:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JV0-Yf-7eK"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="58q-1j-eKY" firstAttribute="width" secondItem="tLl-zz-8XD" secondAttribute="width" id="BnX-m0-Ub0"/>
                                    <constraint firstItem="58q-1j-eKY" firstAttribute="height" relation="greaterThanOrEqual" secondItem="tLl-zz-8XD" secondAttribute="height" id="VY4-Qv-mU1"/>
                                    <constraint firstItem="W6Q-yY-pAv" firstAttribute="width" secondItem="tLl-zz-8XD" secondAttribute="width" id="W16-xu-f36"/>
                                    <constraint firstAttribute="width" constant="160" id="sy8-zT-N0s"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="tLW-YZ-fpl" firstAttribute="top" secondItem="9tX-i2-CVS" secondAttribute="bottom" constant="41" id="0jK-r9-I7F"/>
                            <constraint firstItem="Yvx-Wc-A5L" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="39" id="8oF-4f-JCV"/>
                            <constraint firstItem="tLW-YZ-fpl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jg2-no-QQE"/>
                            <constraint firstItem="ClN-89-AzU" firstAttribute="top" secondItem="Yvx-Wc-A5L" secondAttribute="bottom" constant="15.5" id="Lf5-V3-6h1"/>
                            <constraint firstItem="9tX-i2-CVS" firstAttribute="top" secondItem="ClN-89-AzU" secondAttribute="bottom" constant="8" id="OBr-eA-Pt7"/>
                            <constraint firstItem="Gad-tj-EZ4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="U9C-Sk-Br5"/>
                            <constraint firstItem="9tX-i2-CVS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VMc-kB-VqO"/>
                            <constraint firstItem="ClN-89-AzU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YP8-th-nUp"/>
                            <constraint firstItem="Gad-tj-EZ4" firstAttribute="top" secondItem="tLW-YZ-fpl" secondAttribute="bottom" constant="14.5" id="dLd-ev-yFD"/>
                            <constraint firstItem="Yvx-Wc-A5L" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dVG-ds-bBe"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="textfieldCancel" destination="9tX-i2-CVS" id="nqd-v3-qqU"/>
                        <outlet property="textfieldDefault" destination="ClN-89-AzU" id="TFw-GB-nUe"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="140" y="129.98500749625188"/>
        </scene>
    </scenes>
</document>
